@@ -36,6 +36,7 @@ MACRO(MANAGE_FILE_EXPIRY_TEST expected file expireSecond)
     ENDIF("${expected}" STREQUAL "NOT_EXIST")
     MESSAGE("MANAGE_FILE_EXPIRY: ${caseName}")
     MANAGE_FILE_EXPIRY(v ${file} ${expireSecond})
+    FILE(REMOVE ${file})
     IF(NOT "${v}" STREQUAL "${expected}")
 	MESSAGE(SEND_ERROR "|${v}| <> |${expected}|")
     ENDIF(NOT "${v}" STREQUAL "${expected}")
