@@ -1,5 +1,7 @@
-* Mon Mar 24 2014 Ding-Yi Chen <dchen at redhat.com> - 1.3.1
+* Tue Apr 29 2014 Ding-Yi Chen <dchen at redhat.com> - 1.3.1
 - [TODO] Fix EPEL 7 support.
+- Enhancement:
+  + ManageFile: New function: MANAGE_FILE_EXPIRY
 
 * Fri Feb 28 2014 Ding-Yi Chen <dchen at redhat.com> - 1.3.0
 - Fixed Bug 1002279 - Project configuration bugs when using cmake-fedora-newprj
